# hmrdp

./: .clangd  .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build-profile.json5  oh-package.json5  signing.local.json5.example
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: APPGALLERY_CHECKLIST.md  GETTING_STARTED.md  PRIVACY_POLICY.md
entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  hm_log.h  input_mapper.cpp  input_mapper.h  napi_init.cpp  rdp_session.cpp  rdp_session.h
entry/src/main/cpp/types/libhmrdp/: Index.d.ts  oh-package.json5
entry/src/main/ets/components/: FolderBrowser.ets  PasswordDialog.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: AccountEntry.ets  AccountStore.ets  CertStore.ets  DeviceKit.ets  PCEntry.ets  PCStore.ets  SessionParams.ets  ShareFolders.ets
entry/src/main/ets/pages/: AboutPage.ets  AccountsPage.ets  EditAccountPage.ets  EditPCPage.ets  Index.ets  SessionHost.ets  SessionPage.ets
entry/src/main/ets/sessionability/: SessionAbility.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/zh_CN/element/: string.json
scripts/: build_hap.sh  build_release_app.sh
tools/icon/: gen_icon.py
